--- a/index.html
+++ b/index.html
@@ -32,8 +32,15 @@
     </div>
 
     <!-- MAIN CONTENT -->
+
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+
+    <h3>
+      <a id="IOL2fellowsMap" class="anchor" href="#IOL2-fellows-map" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+      IOL2 fellows map.
+    </h3>
+    <p> The following maps shows the country of origin (in pink) of the 16 fellows of the Institute of Open Leadership 2</p>
 
     <div id="container" style="position: relative; width: 600px; height: 300px;"></div>
     <script>
@@ -64,7 +71,7 @@
         });
     </script>
 
-
+<!--
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
@@ -89,6 +96,7 @@
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+-->
       </section>
     </div>
 
