Adds references to DataMaps and Mark DiMarco

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <a id="IOL2fellowsMap" class="anchor" href="#IOL2-fellows-map" aria-hidden="true"><span class="octicon octicon-link"></span></a>
       IOL2 fellows map.
     </h3>
-    <p> The following maps shows the country of origin (in pink) of the <a href="https://github.com/alesarrett/IOL2/blob/master/geoFellows.csv">16 fellows</a> of the Institute of Open Leadership 2</p>
+    <p> The following map shows the country of origin (in pink) of the <a href="https://github.com/alesarrett/IOL2/blob/master/geoFellows.csv">16 fellows</a> of the Institute of Open Leadership 2</p>
 
     <div id="container" style="position: relative; width: 600px; height: 300px;"></div>
     <script>
@@ -70,6 +70,8 @@
           }
         });
     </script>
+
+    <p>The map is produced using D3.js and <a href="http://datamaps.github.io/">DataMaps</a> by <a href="https://twitter.com/markmarkoh">Mark DiMarco (@markmarkoh)</a>.
 
 <!--
         <h3>
