Modifies title and tagline

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/alesarrett/IOL2">View on GitHub</a>
 
-          <h1 id="project_title">Iol2</h1>
-          <h2 id="project_tagline">Institute of Open Leadership 2</h2>
+          <h1 id="project_title">My IOL2</h1>
+          <h2 id="project_tagline">Institute of Open Leadership 2 - an Italian view</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/alesarrett/IOL2/zipball/master">Download this project as a .zip file</a>
