--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <a id="IOL2fellowsMap" class="anchor" href="#IOL2-fellows-map" aria-hidden="true"><span class="octicon octicon-link"></span></a>
       IOL2 fellows map.
     </h3>
-    <p> The following map shows the country of origin (in pink) of the <a href="https://github.com/alesarrett/IOL2/blob/master/geoFellows.csv">16 fellows</a> of the Institute of Open Leadership 2</p>
+    <p> The following map shows the country of origin (in pink) of the <a href="https://github.com/alesarrett/IOL2/blob/master/geoFellows.csv">16 fellows</a> of the <a href="https://openpolicynetwork.org/new-fellows-for-2016-institute-for-open-leadership/">Institute of Open Leadership 2</a></p>
 
     <div id="container" style="position: relative; width: 600px; height: 300px;"></div>
     <script>
