Add link to presentation

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 
-    <p><a href="https://github.com/alesarrett/IOL2/blob/gh-pages/day2/mypresentation/index.html">Day 2 presentation</a>
+    <p><a href="./day2/mypresentation/index.html">Day 2 presentation</a>
 
     <h3>
       <a id="IOL2fellowsMap" class="anchor" href="#IOL2-fellows-map" aria-hidden="true"><span class="octicon octicon-link"></span></a>
