Update presentation day 2 #IOL2 with right links to figures

--- a/day2/mypresentation/index.html
+++ b/day2/mypresentation/index.html
@@ -126,7 +126,7 @@
 						<h2>FP7 post-grant Open Access publishing funds pilot</h2>
 						<a href="https://postgrantoapilot.openaire.eu/#home">https://postgrantoapilot.openaire.eu</a>
 						<br>
-						<img height="100" src="./../FP7.png" alt="FP7">
+						<img height="100" src="FP7.png" alt="FP7">
 					</section>
 					<section>
 						<ul>
@@ -147,10 +147,10 @@
 							<li>A total of 282,460 EUR has been paid for APCs, with an average of 1,519 EUR per publication</li>
 					</section>
 					<section>
-						<img height="500" src="./../request_time.png" alt="time">
+						<img height="500" src="request_time.png" alt="time">
 					</section>
 					<section>
-						<img height="500" src="./../request_country.png" alt="time">
+						<img height="500" src="request_country.png" alt="time">
 					</section>
 				</section>
 
