Update presentation day 2 #IOL2 with right links to figures

--- a/day2/mypresentation/index.html
+++ b/day2/mypresentation/index.html
@@ -170,7 +170,7 @@
 							<li class="fragment">Do we need a flexible and modular policy or a comprehensive one?</li>
 							<li class="fragment">CC-BY or CC0 for research data?</li>
 							<ul><li class="fragment">very sensible issues... not yet touched</li></ul>
-							<li>What about institutional research data repositories?</li>
+							<li class="fragment">What about institutional research data repositories?</li>
 						</ul>
 					</section>
 				</section>
