Add ISMAR map in day 2 IOL presentation

--- a/day2/mypresentation/index.html
+++ b/day2/mypresentation/index.html
@@ -51,6 +51,11 @@
 				</section>
 
 				<section>
+					<p>Where I am in Venice</p>
+					<iframe width="100%" height="500px" frameBorder="0" src="https://a.tiles.mapbox.com/v4/alesarrett.o35c6k3h.html?access_token=pk.eyJ1IjoiYWxlc2FycmV0dCIsImEiOiIwYzc0U1pnIn0.3pAYlwqJI0xZYl3dtIcNMQ"></iframe>
+				</section>
+
+				<section>
 					<h2>Context of my project</h2>
 					<p>General problem in research and academics about sharing data</p>
 					<blockquote>
